--- a/webserver/views/input/input_item_error.html
+++ b/webserver/views/input/input_item_error.html
@@ -1,6 +1,5 @@
-{{define "input/input_item_error"}}
-{{template "header" .}}
-
+{{template "layout.html" .}}
+{{define "content"}}
 <main id="main">
     <div class="content-wrap">
         <div class="fixed-btn">
@@ -29,9 +28,6 @@
         </div>
     </div>
 </main>
-</div>
-</body>
-</html>
 
 <script>
     let getLink = window.location.search;
