--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -1,42 +1,39 @@
-{{define "output/item_output_password_form"}}
-{{template "header" .}}
+{{template "layout.html" .}}
+{{define "content"}}
 
-        <main id="main">
-            <div class="content-wrap">
-                <div class="list-box">
-                    <div class="list-title">비밀번호 입력하거나 입주민 카드를 태그해주세요</div>
-                    <div class="list-top">
-                        <p class="title">귀하의 호수</p>
-                        <p class="value">{{.Address}}호</p>
-                    </div>
-                    <div class="list-top">
-                        <p class="title">비밀번호</p>
-                        <p class="value"><input type="password" id="$password_input"></p>
-                    </div>
-                    <div class="number-input" id="number_keypad">
-                        <button class="number" value="1">1</button>
-                            <button class="number" value="2">2</button>
-                            <button class="number" value="3">3</button>
-                            <button class="number" value="4">4</button>
-                            <button class="number" value="5">5</button>
-                            <button class="number" value="6">6</button>
-                            <button class="number" value="7">7</button>
-                            <button class="number" value="8">8</button>
-                            <button class="number" value="9">9</button>
-                            <button></button>
-                            <button class="number" value="0">0</button>
-                            <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
-                    </div>
-                    <div class="btn-wrap">
-                        <button class="btn-normal" id="$submit_btn">입력 완료</button>
-                        <button class="btn-normal" id="$cancel_btn">취소</button>
-                    </div>
-                </div>
+<main id="main">
+    <div class="content-wrap">
+        <div class="list-box">
+            <div class="list-title">비밀번호 입력하거나 입주민 카드를 태그해주세요</div>
+            <div class="list-top">
+                <p class="title">귀하의 호수</p>
+                <p class="value">{{.Address}}호</p>
             </div>
-        </main>
+            <div class="list-top">
+                <p class="title">비밀번호</p>
+                <p class="value"><input type="password" id="$password_input"></p>
+            </div>
+            <div class="number-input" id="number_keypad">
+                <button class="number" value="1">1</button>
+                <button class="number" value="2">2</button>
+                <button class="number" value="3">3</button>
+                <button class="number" value="4">4</button>
+                <button class="number" value="5">5</button>
+                <button class="number" value="6">6</button>
+                <button class="number" value="7">7</button>
+                <button class="number" value="8">8</button>
+                <button class="number" value="9">9</button>
+                <button></button>
+                <button class="number" value="0">0</button>
+                <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+            </div>
+            <div class="btn-wrap">
+                <button class="btn-normal" id="$submit_btn">입력 완료</button>
+                <button class="btn-normal" id="$cancel_btn">취소</button>
+            </div>
+        </div>
     </div>
-</body>
-</html>
+</main>
 
 <script>
     const url = new URL(window.location.href);
@@ -47,15 +44,15 @@
             item_id: parseInt(itemId),
             password: parseInt($password_input.value),
         })
-        .then(axiosResult => {
-            let response = axiosResult.data;
-            console.log(response);
-            location.replace('/output/accept?itemId=' + itemId);
-        })
-        .catch(err => {
-            alert('비밀번호가 올바르지 않습니다.');
-            console.error(err);
-        })
+            .then(axiosResult => {
+                let response = axiosResult.data;
+                console.log(response);
+                location.replace('/output/accept?itemId=' + itemId);
+            })
+            .catch(err => {
+                alert('비밀번호가 올바르지 않습니다.');
+                console.error(err);
+            })
     }
 
     $cancel_btn.onclick = () => {
@@ -73,20 +70,20 @@
     let input = '$password_input'
     let password_list = [];
 
-    $password_input.onclick  = () => {
+    $password_input.onclick = () => {
         $password_input.focus();
         input = $(":focus").attr('id')
         console.log(input)
     };
 
-    $('.number').click(function(){
+    $('.number').click(function () {
         number = $(this).attr('value');
         if (input == '$password_input') {
             password_list.push(number)
             password = password_list.join('');
             console.log(password)
             document.getElementById("$password_input").value = password;
-        } 
+        }
     });
 
     backspace.onclick = () => {
