--- a/webserver/views/input/complete_input_item.html
+++ b/webserver/views/input/complete_input_item.html
@@ -1,45 +1,41 @@
-{{define "input/complete_input_item"}}
-{{template "header" .}}
-
-        <main id="main">
-            <div class="content-wrap">
-                <div class="fixed-btn">
-                    <button class="btn-normal home_btn">첫 화면으로</button>
+{{template "layout.html" .}}
+{{define "content"}}
+<main id="main">
+    <div class="content-wrap">
+        <div class="fixed-btn">
+            <button class="btn-normal home_btn">첫 화면으로</button>
+        </div>
+        <!-- 입고 완료 -->
+        <div class="msg-wrap">
+            <div class="msg-body">
+                <div class="img-wrap">
+                    <img src="/static/images/ico_check.png" alt="">
                 </div>
-                <!-- 입고 완료 -->
-                <div class="msg-wrap">
-                    <div class="msg-body">
-                        <div class="img-wrap">
-                            <img src="/static/images/ico_check.png" alt="">
-                        </div>
-                        <p class="msg">택배 입고가 완료되었습니다. <br><br>추가 입고 하시겠습니까?</p>
-                    </div>
-                    <div class="msg-footer">
-                        <div class="btn-wrap">
-                            <button class="btn-normal" id="ok_btn">예</button>
-                            <button class="btn-normal btn-white" id="no_btn">아니오</button>
-                        </div>
-                    </div>
+                <p class="msg">택배 입고가 완료되었습니다. <br><br>추가 입고 하시겠습니까?</p>
+            </div>
+            <div class="msg-footer">
+                <div class="btn-wrap">
+                    <button class="btn-normal" id="ok_btn">예</button>
+                    <button class="btn-normal btn-white" id="no_btn">아니오</button>
                 </div>
             </div>
-        </main>
+        </div>
     </div>
-</body>
-</html>
+</main>
 
 <script>
-    setTimeout(function(){
-        location.href='/';
+    setTimeout(function () {
+        location.href = '/';
     }, 8000);
 
     ok_btn.onclick = () => {
-        location.href="/input/regist_delivery"
+        location.href = "/input/register_delivery"
     };
 
     no_btn.onclick = () => {
-        location.href="/"
+        location.href = "/"
     };
-        
+
     // TODO - 삭제
     /* 입고 */
     // axios.post('/input/input').then(res => {
