--- a/webserver/views/output/item_output_accept.html
+++ b/webserver/views/output/item_output_accept.html
@@ -1,30 +1,27 @@
-{{define "output/item_output_accept"}}
-{{template "header" .}}
+{{template "layout.html" .}}
+{{define "content"}}
 
-        <main id="main">
-            <div class="content-wrap">
-                <div class="fixed-btn">
-                    <button class="btn-normal" id="$takeout_btn">(임시) 물건 꺼내기</button>
+<main id="main">
+    <div class="content-wrap">
+        <div class="fixed-btn">
+            <button class="btn-normal" id="$takeout_btn">(임시) 물건 꺼내기</button>
+        </div>
+        <!-- 택배 꺼내기 -->
+        <div class="msg-wrap">
+            <div class="msg-body">
+                <div class="img-wrap">
+                    <img src="/static/images/ico_receive.png" alt="">
                 </div>
-                <!-- 택배 꺼내기 -->
-                <div class="msg-wrap">
-                    <div class="msg-body">
-                        <div class="img-wrap">
-                            <img src="/static/images/ico_receive.png" alt="">
-                        </div>
-                        <p class="msg">택배를 꺼내 주세요</p>
-                        <p class="green time-msg">5초 뒤 자동으로 재입고 됩니다.</p>
-                        <p class="time-count" >
-                            <span id="$counter">5</span>
-                        </p>
-                    </div>
-                </div>
-                
+                <p class="msg">택배를 꺼내 주세요</p>
+                <p class="green time-msg">5초 뒤 자동으로 재입고 됩니다.</p>
+                <p class="time-count">
+                    <span id="$counter">5</span>
+                </p>
             </div>
-        </main>
+        </div>
+
     </div>
-</body>
-</html>
+</main>
 
 <script>
     const url = new URL(window.location.href);
