--- a/webserver/views/input/input_item_error.html
+++ b/webserver/views/input/input_item_error.html
@@ -21,10 +21,17 @@
                 </div>
                 <p class="msg">택배를 다시 입고해주세요.</p>
             </div>
-            <div class="msg-footer">
+           <!--  <div class="msg-footer">
                 <div class="btn-wrap">
                     <button class="btn-normal cancel_btn">입고 취소</button>
                 </div>
+            </div> -->
+        </div>
+    </div>
+    <div class="popup-layer" style="display: none;" id="modal">
+        <div class="popup-box msg-box">
+            <div class="popup-body">
+                <p class="msg">물품을 회수해주세요
             </div>
         </div>
     </div>
@@ -46,41 +53,45 @@
         $('#error_msg').html(getHtml)
     }
 
-    /* 물품 회수 시 이 전으로 */ 
+   
+    let isItemOnTable;
+    let keep = true; // 함수 실행 가능 여부 확인 true : 가능
+    const modal = document.getElementById("modal");
+
+    
     setTimeout(function(){
-        axios.post('/input/senseItem').then(res => {
-            if(res.data.status == 200){
-                    location.replace(res.data.data)
-            } else{
-                console.log(res)
-                alert(res)
-            }
-            
-        }).catch(err => {
-            console.log(err);
-            alert(err)
-        });
+        isItemOnTable = setInterval(send_stop_info, 1000);
     }, 5000);
+
 
     /* 입고 취소 */
     function send_stop_info() {
         let request = JSON.stringify({
             step: "2",
         });
+        modal.style.display = "block";
+        document.body.style.overflow = "hidden";
 
-        axios.post('/input/stop_input', request).then(res => {
-            if(res.data.status == 200){
-                alert('입고를 취소하셨습니다.');
-                location.href='/input/cancel_input_item'
-            } else{
-                console.log(res.data.error)
-                alert(res.data.error)
-            }
-            
-        }).catch(err => {
-            console.log(err);
-            alert(err.response.data.error)
-        });
+        // 문 열고 물품 회수했는지 확인
+        if(keep == true){
+            keep = false;
+            axios.post('/input/stop_input', request).then(res => {
+                let response = res.data.data
+                console.log(res.data)
+                // 물품이 있다면 반복실행
+                if(response == 'true'){
+                    console.log("회수 안함")
+                    keep = true
+                } else{
+                    // 물품이 없다면 inputItem
+                    console.log("회수 완료")
+                    clearInterval(isItemOnTable)
+                    location.href='/'
+                }
+            }).catch(err => {
+                console.error(err);
+            });
+        }       
     }
 
     $('.home_btn').click(function(){
